<resources>
    <string name="app_name">Kray</string>
    <string name="get_started">Get started</string>
    <string name="welcome">Welcome</string>
    <string name="choose">choose a restaurant for you</string>
    <string name="user_name">User name</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="search">Search</string>
    <string name="cuisines">Cuisines</string>
    <string name="sign_in">Sign in</string>
    <string name="max_average_check">Max average check</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordRepeat">Please, repeat password</string>
    <string name="createAccount">Create account?</string>
    <string name="signUp">Sign up</string>
    <string name="PleaseEnterLogin">Please, enter login</string>
    <string name="PleaseEnterPassword">Please, enter password</string>
    <string name="enter_your_feedback">Enter your feedback</string>
    <string name="your_feedback">Your feedback</string>
    <string name="Address">Address </string>
    <string name="Telephone">Telephone </string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
</resources>
